[package]
categories = ["cryptography", "no-std"]
authors = [
  "Marloes Venema <m.venema@cs.ru.nl>",
  "Leon Botros <l.botros@cs.ru.nl>"
]
description = "Efficient and Generic Transformations for Chosen-Ciphertext Secure Predicate Encryption"
edition = "2021"
keywords = ["predicate", "encryption", "ecc", "no_std"]
license = "MIT"
name = "cca_transforms"
version = "0.0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "main"
required-features = [
  "cgwfo",
  "cgwkv1",
  "rwac",
  "rwac_cpa"
]

[[bin]]
name = "sizes"
required-features = [
  "cgwfo",
  "cgwkv1"
]

[dependencies]
arrayref = "0.3.6"
group = "0.12.0"
rand = "0.8.4"
irmaseal-curve = { version = "0.1.4", features = ["alloc", "group", "pairings"] }

[dependencies.byteorder]
default-features = false
version = "1.3"

[dependencies.subtle]
default-features = false
version = "2.4.1"

[dependencies.tiny-keccak]
features = ["sha3", "shake"]
version = "2.0.2"

[dev-dependencies]
criterion = "0.3.5"
paste = "1.0.5"

[features]
cgw = []
cgwfo = ["cgw"]
cgwkv1 = []
rwac = []
rwac_cpa = []

[lib]
bench = false
doctest = false
